# sof-discord-bot

./: .env.example  README.md  comm_discord.py  fakedata.py  gen_scoreboard.py  info_client.func  pyproject.toml  requirements.txt  run.py  setup_env.bat  setup_env.sh  sof_exporter.py  sofss.py
__apply_patch_workspace__/: move_sof_exporter.patch
deprecated/: comm_discord.py  m32lib.py  pak.py  sof_exporter.py
sofplus/addons/: info_client.func
src/sof_discord_bot/: cli.py  discorder.py  exporter.py  logging_utils.py  scoreboard.py  watcher.py
systemd/: sof-discord-bot.env.example  sof-discord-bot.service
